[package]
name = "abft-consensus"
version = "0.0.1"
authors = ["Taekion"]
description = "An asynchronous BFT consensus service for Hyperledger Sawtooth"

[[bin]]
name = "abft-consensus"
path = "src/main.rs"

[[bin]]
name = "genshares"
path = "src/bins/genshares.rs"

[dependencies]
clap = "2"
hex = "0.3"
log = "0.3.0"
log4rs = "0.7.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_millis = "0.1"
sawtooth-sdk = "0.4"
rust-crypto = "0.2.36"
bincode = "1.2.1"
rand = "0.6.5"
rand_derive = "0.5.0"
hbbft = { git = "https://github.com/poanetwork/hbbft.git" }


[package.metadata.deb]
maintainer = "sawtooth"
depends = "$auto"
assets = [
    ["packaging/systemd/sawtooth-devmode-engine-rust.service", "/lib/systemd/system/sawtooth-devmode-engine-rust.service", "640"],
    ["packaging/systemd/sawtooth-devmode-engine-rust", "/etc/default/sawtooth-devmode-engine-rust", "640"],
    ["target/release/abft-consensus", "/usr/bin/abft-consensus", "755"]
]
maintainer-scripts = "packaging/ubuntu"
